<resources>
    <!--##########  App/Activity/Fragment  ##########-->
    <string name="text_app_name">Chatter</string>


    <!--##########  Text Field Constants  ##########-->
    <string name="text_username">User Name</string>
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_password">Password</string>
    <string name="text_email">Email</string>
    <string name="text_registration">Registration</string>
    <string name="text_sign_in">SIGN IN</string>
    <string name="text_password_retype">Retype Password</string>
    <string name="text_global_chat">Global Chat</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_not_signed_up_yet">Not signed up yet?</string>
    <string name="text_return_to_login">RETURN TO LOGIN</string>
    <string name="text_hello_weather">Hello Weather</string>
    <string name="text_fragment_home_chats_title">Recent Chats</string>


    <!--##########  Nav Drawer Constants  ##########-->
    <string name="title_activity_home">HomeActivity</string>
    <string name="nav_header_title">Chatter</string>
    <string name="nav_header_subtitle">TCSS 450 Project</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--##########  Actionable Constants  ##########-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="string_action_change_password">Change Password</string>


    <!--  In Register Fragment  -->
    <string name="string_fragment_from_register_to_login_email">
        Email from register fragment to verification fragment
    </string>

    <!--  In Verification Fragment  -->
    <string name="string_fragment_verification_registration_successful">
        Registration Successful!
    </string>
    <string name="string_fragment_verification_first_phrase">
        A verification link has been sent to your email:
    </string>
    <string name="string_fragment_verification_second_phrase">
        Please go to you email account to verify your email.
    </string>
    <string name="string_fragment_verification_third_phrase">
        Once you done, please click the button below to go back to the login page.
    </string>

    <!--  In ResetPassword Fragment  -->
    <string name="text_reset_password">Reset Password</string>
    <string name="text_reset_now">Reset Now</string>

    <!--  In ResetPasswordVerification Fragment  -->
    <string name="string_fragment_reset_password_verification_reset_successful">
        Reset Successful!
    </string>
    <string name="string_fragment_reset_password_verification_first_phrase">
        A temporary password has been sent to your email:
    </string>

    <!--  In ChangePassword Fragment  -->
    <string name="string_fragment_change_password">Change Password</string>
    <string name="string_fragment_submit_password">Submit Password</string>


    <string name="string_fragment_change_password_verification_change_successful">
        Password Changed!
    </string>
    <string name="string_fragment_change_password_verification_first_phrase">
        Password has been changed associated with the account below
     </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  In Connection Fragment  -->
    <string name="text_connection">Connections</string>

    <!--  In Weather Fragment  -->
    <string name="text_fragment_weather_zip">Enter a Zip code</string>
    <string name="text_fragment_weather_invalid_zip">Invalid Zip code</string>
    <string name="title_activity_map">Map</string>
    <string name="text_fragment_weather_10_days">10 days</string>
    <string name="text_fragment_weather_today">Today</string>
    <string name="text_fragment_weather_favorites">Favorites</string>
    <string name="text_fragment_weather_title">Weather</string>
    <string name="text_fragment_weather_text_add_to">Save Current Location</string>

    <string name="key_chat_id">chat id</string>
    <string name="keys_intent_messages">every message</string>
    <string name="ep_getAll">getAll</string>
    <string name="keys_intent_connections_received">connections received</string>
    <string name="keys_intent_connections_search">Connections Searched</string>
    <string name="ep_search">search</string>
    <string name="ep_invite">invite</string>
    <string name="title_activity_maps_activitydelete">Map</string>


</resources>

