<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textview_fragment_change_password_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_action_change_password"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/edittext_fragment_change_password_password"
        style="@style/edittext_chatter_plaintext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_fragment_change_password_header" />

    <EditText
        android:id="@+id/edittext_fragment_change_password_retype_password"
        style="@style/edittext_chatter_plaintext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_password_retype"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_change_password_password" />

    <Button
        android:id="@+id/btn_fragment_change_password_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/string_fragment_submit_password"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_fragment_change_password_retype_password"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>